@@ -318,6 +318,7 @@ People/companies who were/are contributing code to cocos2d for iPhone (alphabeti
 		TextureAtlas: added the possibility to draw the Quads in parts
 		TextureAtlas: Render "static" VBO batches between 6~10% faster. patch.
 		CCArray / ccArray: Added reverseObjects and reduceMemoryFootprint methods.
+		EAGLView: call ESRender#resizeLayer only if the new size is different
 	* marcu.catalin:
 		Menu items are not consumed is items are not visible
 	* Mark Cooke:
